<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name" translatable="false">OmniJaws</string>
    <string name="provider_title">Weather provider</string>
    <string name="units_title">Unit</string>
    <string name="provider_openweathermap" translatable="false">OpenWeatherMap</string>
    <string name="provider_gismeteo" translatable="false">Gismeteo</string>
    <string name="provider_accuweather" translatable="false">AccuWeather</string>
    <string name="provider_metnorway" translatable="false">MET Norway</string>
    <string name="provider_pirateweather" translatable="false">Pirate Weather</string>
    <string name="provider_twc" translatable="false">The Weather Channel</string>
    <string name="provider_yandex" translatable="false">Yandex Weather</string>
    <string name="provider_weatherbit" translatable="false">Weatherbit</string>
    <string name="provider_foreca" translatable="false">Foreca</string>
    <string name="provider_openmeteo" translatable="false">Open-Meteo</string>
    <string name="weather_progress_title">Verifying location</string>
    <string name="weather_select_location">Select location</string>
    <string name="custom_location_title">Custom location</string>
    <string name="weather_custom_location_dialog_title">Enter location</string>
    <string name="weather_custom_location_title">Location</string>
    <string name="weather_custom_location_missing">Set custom location</string>
    <string name="weather_retrieve_location_dialog_title">Cannot retrieve location!</string>
    <string name="weather_retrieve_location_dialog_message">Network geolocation is disabled.\n\nSet a custom location or enable network location</string>
    <string name="weather_retrieve_location_dialog_enable_button">Enable</string>
    <string name="settings_title">Settings</string>
    <string name="auto_update_title">Automatic updates</string>
    <string name="unit_metric">Metric (\u00b0C)</string>
    <string name="unit_imperial">Imperial (\u00b0F)</string>
    <string name="update">Update</string>
    <string name="enable_title">Enable</string>
    <string name="update_interval_title">Update interval</string>
    <string name="interval_1_hour">1 hour</string>
    <string name="interval_2_hour">2 hours</string>
    <string name="interval_4_hour">4 hours</string>
    <string name="interval_6_hour">6 hours</string>
    <string name="interval_12_hour">12 hours</string>
    <string name="weather_tile_title">Weather</string>
    <string name="weather_icon_pack_title">Condition icon pack</string>
    <string name="weather_icon_pack_playstore">Find icon packs</string>
    <string name="service_disabled">Disabled</string>
    <string name="service_error">Error</string>
    <string name="last_update_time">Last update time</string>
    <string name="omnijaws_service_unknown">No weather data</string>
    <string name="omnijaws_service_error">Error loading weather data</string>
    <string name="omnijaws_service_init">Waiting...</string>
    <string name="omnijaws_service_progress">Updating...</string>
    <string name="omnijaws_service_disabled">Service disabled</string>
    <string name="weather_widget">Weather</string>
    <string name="omnijaws_current_text">Now</string>
    <string name="show_background_title">Background shadow</string>
    <string name="weather_config_title">Service settings</string>
    <string name="weather_config_summary"></string>
    <string name="omnijaws_service_error_marker" translatable="false">*</string>
    <string name="with_forecast_title">With 4-day forecast and details</string>
    <string name="omnijaws_city_unknown">Unknown</string>
</resources>
